@@ -635,10 +635,11 @@ config DS_MOD_DL_SITE_2
 		the default servers #1 and #2, many packages have another server name
 		in their make file, so a user-defined mirror should rarely be necessary.
 	    
-comment "Download site #3 - default: empty (reserved for later use)"
+comment "Download site #3 - default: http://dsmod.magenbrot.net"
 
 config DS_MOD_DL_SITE_3
 	string ""
+	default "http://dsmod.magenbrot.net"
 	help
 		Download site #3 for DS-Mod packages like 'mc-4.5.0-dsmod-0.2.tar.bz2',
 		*not* for original software packages like 'mc-4.5.0.tar.gz'. During the
